@@ -1,7 +1,7 @@
 Use x-www-browser by default.
 --- a/src/clfswm-util.lisp
 +++ b/src/clfswm-util.lisp
-@@ -705,7 +705,7 @@
+@@ -735,7 +735,7 @@
  ;;;;;| Various definitions
  ;;;;;`-----
  
